# robotic-finger-simulation

./: README.md  requirements.repos  teensy_interface_test.py
blender_files/: README.md  rds_finger.blend  rds_finger.blend1  rds_finger_4bar.blend  rds_finger_4bar.blend1  sdf_blender_export.py  urdf_blender_export.py
finger_bridge/: CMakeLists.txt  README.md  package.xml
finger_bridge/include/serial_interface/: serial_interface.hpp
finger_bridge/src/: hardware_bridge.cpp  serial_interface.cpp  simulation_bridge.cpp
finger_control/: CMakeLists.txt  README.md  package.xml
finger_control/launch/: basic_control.launch.xml  hardware_control.launch.xml  simulation_control.launch.xml
finger_control/src/: finger_control.cpp  serial_test.cpp  sinusoid_demo.cpp
finger_description/: CMakeLists.txt  README.md  colcon.pkg  package.xml
finger_description/config/: config.rviz
finger_description/env-hooks/: diff_drive.dsv
finger_description/launch/: bridge.yaml  fingersim.launch.xml  fingerviz.launch.xml
finger_description/meshes/: joint_axes.yaml
finger_description/meshes/collision/: col_base_link.stl  col_distal_phalanx.stl  col_mcp_link.stl  col_middle_phalanx.stl  col_proximal_phalanx.stl
finger_description/meshes/visual/: base_link.stl  distal_phalanx.stl  mcp_link.stl  middle_phalanx.stl
finger_description/models/Finger/: finger.sdf  model.config
finger_description/models/Finger/meshes/: joint_axes.yaml
finger_description/models/Finger/meshes/collision/: col_base_link.stl  col_middle_phalanx.stl  col_middle_phalanx1.stl  col_middle_phalanx2.stl  col_proximal_phalanx.stl
finger_description/models/Finger/meshes/visual/: base_link.stl  distal_phalanx.stl  mcp_link.stl  middle_phalanx1.stl  middle_phalanx2.stl
finger_description/sdf/: finger.sdf
finger_description/urdf/: finger.urdf  finger.urdf.xacro
finger_description/worlds/: ddrive.world.sdf
finger_interfaces/: CMakeLists.txt  package.xml
finger_interfaces/action/: Cartesian.action  Linear.action  Sinusoidal.action
finger_interfaces/msg/: MotorFeedback.msg
finger_interfaces/srv/: SendCommand.srv  StartStopCommand.srv  Waypoints.srv
finger_planner/: CMakeLists.txt  README.md  package.xml
finger_planner/config/: movement_config.yaml
finger_planner/src/: finger_planner.cpp
finger_recorder/: package.xml  plotter.py  setup.cfg  setup.py
finger_recorder/bags/finger_bag_20260506_001539/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_003439/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_003811/: finger_bag_20260506_003811_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_004214/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_004437/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_005704/: finger_bag_20260506_005704_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_005846/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_005906/: finger_bag_20260506_005906_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_005938/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_005958/: finger_bag_20260506_005958_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_010019/: finger_bag_20260506_010019_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_010119/: finger_bag_20260506_010119_0.mcap
finger_recorder/bags/finger_bag_20260506_010204/: finger_bag_20260506_010204_0.mcap
finger_recorder/bags/finger_bag_20260506_010247/: metadata.yaml
finger_recorder/bags/finger_bag_20260506_011137/: finger_bag_20260506_011137_0.mcap  metadata.yaml
finger_recorder/bags/finger_bag_20260506_011241/: finger_bag_20260506_011241_0.mcap
finger_recorder/bags/finger_bag_20260506_011358/: metadata.yaml
finger_recorder/finger_bag_20260506_001539/: finger_bag_20260506_001539_0.mcap
finger_recorder/finger_bag_20260506_003439/: finger_bag_20260506_003439_0.mcap
finger_recorder/finger_bag_20260506_004214/: finger_bag_20260506_004214_0.mcap
finger_recorder/finger_bag_20260506_004437/: finger_bag_20260506_004437_0.mcap
finger_recorder/finger_bag_20260506_005814/: finger_bag_20260506_005814_0.mcap  metadata.yaml
finger_recorder/finger_bag_20260506_005846/: finger_bag_20260506_005846_0.mcap
finger_recorder/finger_bag_20260506_005938/: finger_bag_20260506_005938_0.mcap
finger_recorder/finger_bag_20260506_010119/: metadata.yaml
finger_recorder/finger_bag_20260506_010204/: metadata.yaml
finger_recorder/finger_bag_20260506_010247/: finger_bag_20260506_010247_0.mcap
finger_recorder/finger_bag_20260506_011241/: metadata.yaml
finger_recorder/finger_bag_20260506_011358/: finger_bag_20260506_011358_0.mcap
finger_recorder/finger_recorder/: finger_recorder.py
finger_simulation/: README.md  package.xml  setup.cfg  setup.py
finger_simulation/config/: base_sim.rviz
finger_simulation/finger_simulation/: 4barfinger_sim.py  basic_finger_sim.py  basic_sim.py  finger_sim.py
finger_simulation/finger_simulation/systems/: drake2ros_system.py  finger_pulley_system.py  motor_feedback_system.py  motor_input_system.py  motor_radius_system.py  motor_system.py  ros2drake_system.py  ros2drake_system_position.py  tendon_feedback_system.py
finger_simulation/launch/: 4barfingersim.launch.xml  4barsim.launch.xml  basic_fingersim.launch.xml  fingersim.launch.xml
finger_simulation/models/Standard_Toilet/: model.sdf
finger_simulation/models/box/: model.config  model.sdf
finger_simulation/models/grasspatch/: model.sdf
fingerlib/: CMakeLists.txt  README.md
fingerlib/include/fingerlib/: joint_trajectory.hpp  pos_controller.hpp  sinusoid.hpp  transformer.hpp  transforms.hpp
fingerlib/src/: joint_trajectory.cpp  pos_controller.cpp  sinusoid.cpp  transformer.cpp
fingerlib/tests/: test_joint_traj.cpp  test_transformer.cpp
