<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finger_control</name>
  <version>0.0.0</version>
  <description>Runs high level control coordinating perception and movement commands</description>
  <maintainer email="michael.jenz77@gmail.com">Mjenz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>finger_interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
